src/objects/AMS_Voucher_Process_Run__c.object
<CustomObject>
    <description>Object that logs information of a Voucher calculation process.</description>
    <fields>
        <fullName>AMS_Vouchers_Creation_Batch__c</fullName>
        <label>Vouchers Creation Batch</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_Country_Calculation_Batch__c</fullName>
        <label>Average Country Calculation Batch</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Averages__c</fullName>
        <description>Average Countries Calculation Values</description>
        <inlineHelpText>Average Countries Calculation Values</inlineHelpText>
        <label>Country Averages</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Represents the Status of the Voucher Process: Either &quot;Started&quot; or &quot;Ender&quot;</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Ended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vouchers_PDF_Creation_Batch__c</fullName>
        <label>Vouchers PDF Creation Batch</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>AMS Voucher Process Run</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>AMS Voucher Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AMS Voucher Process Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>